--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import './log-console.scss';
 @import './log-filter.scss';
 @import './log-context.scss';
+@import './log-chart.scss';
 
 #log-visual-comp {
   background-color: #fff;
