U 上下文样式

--- a/src/styles/log-console.scss
+++ b/src/styles/log-console.scss
@@ -31,6 +31,15 @@
 
     .log-console-item {
       position: relative;
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 1px;
+        bottom: 1px;
+        width: 3px;
+        background-color: rgb(221, 228, 237);
+      }
       .log-console-item-msg {
         display: flex;
         flex-flow: row nowrap;
