--- a/src/styles/log-context.scss
+++ b/src/styles/log-context.scss
@@ -4,18 +4,27 @@
       max-height: 250px;
       overflow: auto;
     }
+    .log-context-list {
+      padding: 10px;
+    }
+    .log-context-bar {
+      height: 30px;
+      padding: 0px 10px;
+      align-items: center;
+      background: rgb(221, 228, 237);
+    }
     .log-context-prevs,
     .log-context-nexts {
       position: absolute;
       z-index: 2;
-      left: 0;
+      left: 15px;
+      overflow: hidden;
 
-      width: 100%;
+      width: calc(100% - 15px);
       max-height: 250px;
       background: linear-gradient(rgb(255, 255, 255) 0%, rgb(247, 248, 250) 104.25%);
       box-shadow: rgb(221, 228, 237) 0px 2px 4px, rgb(221, 228, 237) 0px 0px 2px;
       border: 1px solid rgb(221, 228, 237);
-      padding: 10px;
       border-radius: 3px;
     }
     .log-context-nexts {
