--- a/src/styles/log-context.scss
+++ b/src/styles/log-context.scss
@@ -9,6 +9,7 @@
     }
     .log-context-bar {
       height: 30px;
+      line-height: 30px;
       padding: 0px 10px;
       align-items: center;
       background: rgb(221, 228, 237);
@@ -21,7 +22,7 @@
       overflow: hidden;
 
       width: calc(100% - 15px);
-      max-height: 250px;
+      max-height: 300px;
       background: linear-gradient(rgb(255, 255, 255) 0%, rgb(247, 248, 250) 104.25%);
       box-shadow: rgb(221, 228, 237) 0px 2px 4px, rgb(221, 228, 237) 0px 0px 2px;
       border: 1px solid rgb(221, 228, 237);
