--- a/src/styles/log-filter.scss
+++ b/src/styles/log-filter.scss
@@ -5,7 +5,7 @@
     .log-console-filter {
       padding: 8px 16px;
       border-radius: 3px;
-      margin: 16px 0 16px;
+      margin: 0 0 16px 0;
       border: 1px solid #dce1e6;
 
       display: flex;
